@@ -4,8 +4,8 @@
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkWindow" id="window_main">
     <property name="title" translatable="yes">Update Manager</property>
-    <property name="default_height">600</property>
     <property name="window_position">center</property>
+    <property name="default_height">600</property>
     <signal name="state_changed" handler="on_window_main_size_allocate"/>
     <signal name="size_allocate" handler="on_window_main_size_allocate"/>
     <child>
@@ -445,8 +445,8 @@
                     <property name="can_default">True</property>
                     <property name="receives_default">False</property>
                     <property name="use_stock">True</property>
-                    <accelerator key="Q" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                     <accelerator key="W" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                    <accelerator key="Q" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -477,7 +477,6 @@
     <property name="default_width">600</property>
     <property name="default_height">500</property>
     <property name="type_hint">dialog</property>
-    <property name="window_position">center</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
@@ -552,13 +551,12 @@
   </object>
   <object class="GtkWindow" id="window_fetch">
     <property name="border_width">6</property>
-    <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
+    <property name="default_width">400</property>
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
-    <property name="window_position">center</property>
     <child>
       <object class="GtkVBox" id="vbox6">
         <property name="visible">True</property>
@@ -673,7 +671,6 @@
                 <property name="receives_default">False</property>
                 <property name="border_width">5</property>
                 <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_button_fetch_cancel_clicked"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -698,7 +695,6 @@
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
-    <property name="window_position">center</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox4">
@@ -865,7 +861,6 @@ Your system does not check for updates automatically. You can configure this beh
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
-    <property name="window_position">center</property>
     <child>
       <object class="GtkVBox" id="vbox14">
         <property name="visible">True</property>
@@ -946,7 +941,6 @@ Your system does not check for updates automatically. You can configure this beh
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
     <property name="urgency_hint">True</property>
-    <property name="window_position">center</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox5">
@@ -1078,7 +1072,6 @@ This can be caused by:
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
     <property name="urgency_hint">True</property>
-    <property name="window_position">center</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox6">
